Closed
Bug 40071
Opened 25 years ago
Closed 25 years ago
accesskey doesn't block menus
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P3)
Core
DOM: UI Events & Focus Handling
Tracking
()
VERIFIED
FIXED
M18
People
(Reporter: jruderman, Assigned: joki)
References
()
Details
(Whiteboard: [nsbeta3+])
Attachments
(1 file)
|
44 bytes,
text/html
|
Details |
When the content area has focus, accesskey events trigger buttons correctly,
but menus still drop down (so pressing alt-d at the url, for example, disables
the form elements and also drops down the debug menu)
| Reporter | ||
Comment 1•25 years ago
|
||
Comment 2•25 years ago
|
||
I see this in Linux build 2000-05-22-08, too. Changing Platform/OS to All/All.
OS: Windows 98 → All
Hardware: PC → All
Comment 3•25 years ago
|
||
Mass update: changing qacontact to ckritzer@netscape.com
QA Contact: janc → ckritzer
Comment 4•25 years ago
|
||
I'm seeing correct behavior using today's M18 verification build on Linux.
resolving as wfm.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
| Reporter | ||
Comment 5•25 years ago
|
||
still seems broken to me. reopening.
i'm running 2000 081508 on win98, and tried both the modern and classic skins.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Comment 6•25 years ago
|
||
Nominating for nsbeta3 - accesskeys are pretty useless without this. Also seen
in WinNT4 20000819.
Make sure you view this test case in a build with a QA menu :-)
Gerv
Whiteboard: nsbeta3
Comment 7•25 years ago
|
||
moving nomination to keyword field. -> saari
Comment 8•25 years ago
|
||
CCing akkana, whom I believe just fixed all of this
Comment 9•25 years ago
|
||
I'm not sure whether I fixed it or not ... 'fraid I don't understand the bug or
exactly what the correct behavior should be. And my fix should only change
Linux behavior, if I did it right, so if this bug is truly XP as it says it is,
then my fix yesterday probably won't change it.
Comment 10•25 years ago
|
||
need info: I'm not sure how to reproduce this, could someone please add exact
steps, expected/obseved behavior?
cc jrgm.
Whiteboard: [need info]
| Reporter | ||
Comment 11•25 years ago
|
||
load http://bugzilla.mozilla.org/showattachment.cgi?attach_id=8919 and press
alt-e. we expect the "enable everything" button to be activated and nothing
else, but the edit menu drops down in addition to the button being activated.
Comment 12•25 years ago
|
||
Okay, I see. And I do see the behavior described. I'm not sure how this is
supposed to work, though: I take it the button is supposed to be activated and
nothing else? So maybe the event isn't being cancelled properly in the button
code, or the menu code needs to be checking whether the event was cancelled and
isn't checking properly?
Comment 13•25 years ago
|
||
reassigning to pinkerton as nsbeta3+, p3 for m18. cc joki & saari.
Assignee: saari → pinkerton
Whiteboard: [need info] → [nsbeta3+]
Target Milestone: --- → M18
Updated•25 years ago
|
Status: NEW → ASSIGNED
Comment 14•25 years ago
|
||
tell me if this is correct:
when I get the key event in the menu code, I need to check if preventDefault has
been called on it? If so, i ignore the event?
I'm new to all this default processing mumbo-jumbo.
Comment 15•25 years ago
|
||
ok, i'm landing changes that make the menu listeners check for PreventDefault
being set on the dom event, but apparantly, it's not being set, and I'm not sure
where accesskeys are handled. Pushing bug back to gecko for them to do the right
thing.
Assignee: pinkerton → joki
Status: ASSIGNED → NEW
| Assignee | ||
Comment 16•25 years ago
|
||
Fixed now.
Status: NEW → RESOLVED
Closed: 25 years ago → 25 years ago
Resolution: --- → FIXED
Comment 18•25 years ago
|
||
Verifying that this now works as expected on Win32 (build 2000092508).
Comment 19•25 years ago
|
||
Reassigning QA Contact for all open and unverified bugs previously under Lorca's
care to Gerardo as per phone conversation this morning.
QA Contact: lorca → gerardok
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•