Fix bug 40071 "accesskey doesn't block menus" by propagating the cancelled event state from PreHandleEvent into HandleDOMEvent.  r:jst